Resolved issue with transparent element covering links

--- a/styles/Header.shared.module.css
+++ b/styles/Header.shared.module.css
@@ -119,6 +119,11 @@
 	color: lightblue;
 }
 
+.topLinks,
+.productMenu {
+	z-index: 2;
+}
+
 .topLinks {
 	display: flex;
 	flex-wrap: wrap;
